[gd_scene load_steps=13 format=3 uid="uid://bwqsl1ssco62p"]

[ext_resource type="Script" uid="uid://0qfxsmuf7523" path="res://Enemies/enemy_template.gd" id="1_057sr"]
[ext_resource type="Texture2D" uid="uid://c6xv8b8acgao0" path="res://icon.svg" id="2_tp5d7"]
[ext_resource type="Script" uid="uid://bpy1dv6s7e1jl" path="res://Components/health_component.gd" id="3_r0e1c"]
[ext_resource type="Script" uid="uid://d0j4us0xeud10" path="res://Components/velocity_component.gd" id="4_rexnh"]
[ext_resource type="Script" uid="uid://dftmybkeosab2" path="res://Components/hurt_box_component.gd" id="5_6tws4"]
[ext_resource type="Script" uid="uid://bn1fgwaje5oyp" path="res://Components/stats_component.gd" id="5_tp5d7"]
[ext_resource type="PackedScene" uid="uid://cgka0xce4yub0" path="res://States/state_machine.tscn" id="6_iqhfw"]
[ext_resource type="Script" uid="uid://blw0s8wb6kv3c" path="res://Components/drop_component.gd" id="6_r0e1c"]
[ext_resource type="PackedScene" uid="uid://1i45qhs08bo8" path="res://States/standing.tscn" id="7_46xrd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ycq33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tp5d7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uqnbq"]
radius = 65.192

[sub_resource type="CircleShape2D" id="CircleShape2D_0hlhe"]
radius = 63.0079

[node name="enemy_template" type="CharacterBody2D"]
z_index = -1
collision_layer = 24
collision_mask = 9
script = ExtResource("1_057sr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_tp5d7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ycq33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uqnbq")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_r0e1c")
max_health = 5
metadata/_custom_type_script = "uid://bpy1dv6s7e1jl"

[node name="VelocityComponent" type="Node2D" parent="."]
script = ExtResource("4_rexnh")
metadata/_custom_type_script = "uid://d0j4us0xeud10"

[node name="StatsComponent" type="Node2D" parent="."]
script = ExtResource("5_tp5d7")
metadata/_custom_type_script = "uid://bn1fgwaje5oyp"

[node name="DropComponent" type="Node2D" parent="."]
script = ExtResource("6_r0e1c")
drop_chance = 0.0
metadata/_custom_type_script = "uid://blw0s8wb6kv3c"

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "stats_component")]
collision_layer = 25
collision_mask = 9
script = ExtResource("5_6tws4")
health_component = NodePath("../HealthComponent")
stats_component = NodePath("../StatsComponent")
metadata/_custom_type_script = "uid://dftmybkeosab2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_0hlhe")

[node name="State_Machine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("6_iqhfw")]
starting_state = NodePath("State_Standing")

[node name="State_Standing" parent="State_Machine" instance=ExtResource("7_46xrd")]
